# PlotNeuralNet

./: .gitignore  .gitpod.yml  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  MANIFEST.ini  README.md  build_pnn_docker.sh  pyproject.toml  readme.css  requirements.txt  setup.py  start_pnn_docker.sh  tikzmake.sh
Deep4-net/: Deep4-net.py
PlotNeuralNetPy/: __init__.py  __version__.py  version.py
PlotNeuralNetPy/layers/: RightBandedBox.sty
PlotNeuralNetPy/pycore/: __init__.py  tikzeng.py
PlotNeuralNetPy/pyexamples/: __init__.py  test_simple.py  test_simple.tex  unet.py
binder/: apt.txt
core/: blocks.py  tikzeng.py
examples/AlexNet/: alexnet.tex
examples/DeconvolutionNet/: deconvnet.tex
examples/FCNConvBlock+ConvertedConvBlock (copy)/: fcnconvandconvertedconvblock.tex
examples/FeedForward/: test_torch_mlp.tex
examples/HED/: HED.tex
examples/LeNet/: lenet.tex  lenet.txt
examples/SegNet/: segnet.tex
latexnn/: __init__.py  blocks.py  layers.py  tikzeng.py
layers/: Ball.sty  Box.sty  Conv.sty  ConvRelu.sty  ConvReluPool.sty  Deconv.sty  DomainTransform.sty  FullyConnected.sty  FullyConnectedRelu.sty  GenericSequentialLayer.sty  Gray.sty  Multiply.sty  RightBandedBox.sty  SigmaSum.sty  Sum.sty  Up.sty  UpConvRelu.sty  init.tex
pycore/: __init__.py  blocks.py  tikzeng.py  torchparse.py  version.py
pyexamples/: UNetNotebook.ipynb  autoencoder.py  autoencoder_res.py  demoFc.py  residual_block.py  test_box_ball.py  test_simple.py  test_torch_mlp.py  unet.py  unet.tex
test/: test_simple.py  test_torch_mlp.py  test_unet.py  unet.py
(+13 files in other folders)
